@@ -84,8 +84,8 @@
 #B
 #no_bind_banner
 
-# b|bind_address IP_ADDRESS|HOSTNAME:
-# Bind to this address.
+# b|bind_address SERVER[,SERVER...]
+# Bind to these addresses and ports.
 # (default "")
 #b 127.0.0.1
 #bind_address 127.0.0.1
